--- a/src/components/Header/headerStyles.module.css
+++ b/src/components/Header/headerStyles.module.css
@@ -6,7 +6,8 @@
   align-items: center;
 }
 
-.headerText {
-  color: rgb(173, 3, 3);
+.header-text {
+  color: rgb(180, 1, 1);
+  font-weight: 1000;
   margin: 0;
 }
