--- a/src/components/MainContent/mainContentStyles.module.css
+++ b/src/components/MainContent/mainContentStyles.module.css
@@ -1,5 +1,9 @@
 .container {
-  height: 78vh;
+  height: 90vh;
   width: 100%;
   background-color: cornflowerblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
