--- a/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
+++ b/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
@@ -1,11 +1,17 @@
+.dateContainer {
+  text-align: center;
+}
+
 .table {
   width: 100%;
   margin-bottom: 12px;
+  font-weight:200;
 }
 
 .inner {
   border: none;
-  border-right-color: red;
+  width:25%;
+  border-right-color: blue;
   border-right-style: solid;
   border-right-width: 2px;
 }
