--- a/src/containers/HeartMonitor/heartMonitorStyles.module.css
+++ b/src/containers/HeartMonitor/heartMonitorStyles.module.css
@@ -1,3 +1,17 @@
 .header {
   color: blue;
 }
+
+.table {
+  width: 100%;
+  color: #fa991b;
+  margin-bottom: 30px;
+}
+
+.inner {
+  border: none;
+  width:25%;
+  border-right-color: blue;
+  border-right-style: solid;
+  border-right-width: 4px;
+}
