Add styles to HeartMonitor

--- a/src/components/HeartMonitorComps/Footer/footerStyles.module.css
+++ b/src/components/HeartMonitorComps/Footer/footerStyles.module.css
@@ -1,6 +1,7 @@
 .footer {
-  background-color: cornflowerblue;
+  height: 10%;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
