--- a/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
+++ b/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
@@ -2,10 +2,14 @@
   text-align: center;
 }
 
+.date {
+  margin: 5px;
+}
+
 .table {
   width: 100%;
-  margin-bottom: 12px;
-  font-weight:200;
+  margin-bottom: 5px;
+  background-image: linear-gradient(rgb(138, 183, 247),rgb(98, 149, 245));
 }
 
 .inner {
