--- a/src/components/UI/Modal/modalStyles.module.css
+++ b/src/components/UI/Modal/modalStyles.module.css
@@ -2,11 +2,12 @@
   position: fixed;
   z-index: 500;
   background-color: white;
-  width: 80%;
+  width: 85%;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px black;
   padding: 16px;
   top: 30%;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
+  background-image: linear-gradient(rgb(239, 243, 255),rgb(95, 159, 243));
 }
