--- a/src/components/UI/Input/inputStyles.module.css
+++ b/src/components/UI/Input/inputStyles.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   margin-bottom: 10px;
 }
+
 .input {
   box-sizing: border-box;
   width: 180px;
@@ -20,6 +21,7 @@
   border-width: 2px;
   border-color: rgb(245, 209, 7);
 }
+
 .textArea {
   box-sizing: border-box;
   width: 180px;
@@ -31,6 +33,8 @@
   background-color: rgb(239, 243, 255);
 }
 
-.label {
-  font-weight: bolder;
+.invalid {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(253, 0, 0);
 }
