--- a/src/components/HeartMonitorComps/AddNewMeasure/addNMStyles.module.css
+++ b/src/components/HeartMonitorComps/AddNewMeasure/addNMStyles.module.css
@@ -1,5 +1,8 @@
 .container {
-  margin: 30px 20px;
+  margin: 30px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .buttonContainer {
