--- a/src/components/UI/Input/inputStyles.module.css
+++ b/src/components/UI/Input/inputStyles.module.css
@@ -4,10 +4,11 @@
   align-items: center;
   margin-bottom: 10px;
 }
+
 .input {
   box-sizing: border-box;
-  width: 170px;
-  font-size: 1rem;
+  width: 180px;
+  font-size: 0.8rem;
   padding: 4px;
   border-style: solid;
   border-width: 0 2px 2px 0;
@@ -20,10 +21,11 @@
   border-width: 2px;
   border-color: rgb(245, 209, 7);
 }
+
 .textArea {
   box-sizing: border-box;
-  width: 170px;
-  font-size: 1rem;
+  width: 180px;
+  font-size: 0.8rem;
   padding: 4px;
   border-style: solid;
   border-width: 0 2px 2px 0;
@@ -31,6 +33,8 @@
   background-color: rgb(239, 243, 255);
 }
 
-.label {
-  font-weight: bolder;
+.invalid {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(253, 0, 0);
 }
