--- a/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
+++ b/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
@@ -1,15 +1,10 @@
-.dateContainer {
-  text-align: center;
-}
 
-.date {
-  margin: 5px;
-}
-
-.table {
+.tableHead {
   width: 100%;
-  margin-bottom: 5px;
-  background-image: linear-gradient(rgb(138, 183, 247),rgb(98, 149, 245));
+  color: white;
+  background-color: rgb(255,255,255,.3);
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .inner {
@@ -17,5 +12,5 @@
   width:25%;
   border-right-color: blue;
   border-right-style: solid;
-  border-right-width: 2px;
+  border-right-width: 4px;
 }
