--- a/src/components/HeartMonitorComps/Button/buttonStyles.module.css
+++ b/src/components/HeartMonitorComps/Button/buttonStyles.module.css
@@ -1,6 +1,7 @@
 .button {
   height: 50px;
   width: 70px;
+  margin: 10px;
   background-image: linear-gradient(to top right, rgb(2, 22, 85),rgb(0, 78, 223));
   color: rgb(245, 209, 7);
   border-style: solid;
