Chore/Remove entries from HeartRateData mock

--- a/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
+++ b/src/components/HeartMonitorComps/MeasureDisplay/mdStyles.module.css
@@ -1,11 +1,11 @@
-.listHead {
+/* .listHead {
   height: 15%;
 }
 
 .list {
   height: 85%;
   overflow-y: scroll;
-}
+} */
 
 .tableHead {
   width: 100%;
